// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v1.2.0 (unreleased)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR
| 🗑
| Remove deprecated Hugo frontmatter generation for docs
| https://github.com/knative/client/pull/1563[#1563]
|===

## v1.1.0 (2021-12-14)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR


| 🐛
| Fixed panic in `kn service update`
| https://github.com/knative/client/pull/1533[#1533]

| 🐛
| Fixed panic in `kn service describe`
| https://github.com/knative/client/pull/1529[#1529]

| 🐛
| Fix env, annotation and labels flags in service create/update/apply
| https://github.com/knative/client/pull/1516[#1516]

| ✨
| Add `--tag` to `service create` and allow traffic split <100 when `@latest` is specified
| https://github.com/knative/client/pull/1514[#1514]
|===

## v1.0.0 (2021-11-02)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| Remove deprecated flag `--lookup-path`
| https://github.com/knative/client/pull/1506[#1506]

| ✨
| Rename `--extra-containers` to `--containers`
| https://github.com/knative/client/pull/1499[#1499]

| ✨
| Remove deprecated flags `--min-scale` and `--max-scale`
| https://github.com/knative/client/pull/1498[#1498]

| ✨
| Remove deprecated flags `--limits-cpu` and `--limits-memory`
| https://github.com/knative/client/pull/1498[#1498]

| ✨
| Add more explanation to missing API error message
| https://github.com/knative/client/pull/1497[#1497]

| ✨
| Deprecate `--concurrency-target` and `--concurrency-utilization` in favor of `--scale-target` and `--scale-utilization`, respectively
| https://github.com/knative/client/pull/1490[#1490]

| ✨
| Deprecate `--autoscale-window` in favor of `--scale-window`