@@ -16,6 +16,11 @@
 [cols="1,10,3", options="header", width="100%"]
 |===
 | | Description | PR
+
+| 🐛
+| Fixed panic in `kn channel list`
+| https://github.com/knative/client/pull/1568[#1568]
+
 | 🗑
 | Remove deprecated Hugo frontmatter generation for docs
 | https://github.com/knative/client/pull/1563[#1563]
